@@ -1,3 +1,15 @@
+2010-07-15  Jay Civelli  <jcivelli@chromium.org>
+
+        Reviewed by David Levin.
+
+        [chromium] Making the popup label color visible when the item is
+        selected.
+        https://bugs.webkit.org/show_bug.cgi?id=42271
+
+        * platform/chromium/PopupMenuChromium.cpp:
+        (WebCore::PopupListBox::paintRow): paint the label text with a
+        different color when it is selected. 
+
 2010-07-13  Zhenyao Mo  <zmo@google.com>
 
         Reviewed by Nate Chapin.
